syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "WeatherForecast";
package WeatherForecast;

service WeatherForecasts {
  rpc GetWeatherStream (google.protobuf.Empty) returns (stream WeatherData);
}

message WeatherData {
  string summary = 1;
}